# rust-federation-tester

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.test-harness  README.md  clippy.toml  config.yaml.example  coverage.sh
.cargo/: config.toml
.config/: nextest.toml
.github/: FUNDING.yml
.github/workflows/: benchmarks.yml  coverage-comment.yml  coverage.yml  docker.yml  rust-checks.yml
crates/federation/: Cargo.toml
crates/federation/src/: config.rs  connection_pool.rs  lib.rs  response.rs  security.rs
crates/federation/src/federation/: certificate.rs  connection.rs  dns.rs  keys.rs  mod.rs  network.rs  version.rs  well_known.rs
crates/federation/src/validation/: mod.rs  server_name.rs
crates/loadtest/: Cargo.toml  run_loadtest.sh
crates/loadtest/src/: main.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20250710_185614_add_alert_table.rs  m20250712_090549_add_access_tokens_table.rs  m20250910_192226_fix_timezone.rs  m20250914_120000_add_federation_stats.rs  m20250915_140000_add_unstable_features.rs  m20250922_174734_fix_uniqueness.rs  m20251002_120000_add_alert_state_tracking.rs  m20251004_120000_add_email_log.rs  m20260123_120000_optimize_stats_tables.rs  m20260123_150000_add_oauth2_tables.rs  m20260123_160000_link_alerts_to_oauth2.rs  m20260124_120000_add_password_support.rs  m20260218_000000_add_alert_status_history.rs  m20260218_000001_add_last_recovery_at.rs  m20260219_000000_add_failure_reason_to_status_history.rs  m20260307_000000_rename_oauth2_tables.rs  m20260307_000001_account_features.rs  m20260307_000002_internal_account_client.rs  m20260408_163202_fix_oauth_alert_magic_token.rs  m20260424_000000_add_email_outbox.rs  m20260424_000001_add_password_reset.rs  m20260425_000000_add_alert_notification_emails.rs  m20260425_000001_add_change_alert_support.rs  m20260506_000000_add_missing_indexes.rs  m20260513_000001_add_quiet_hours.rs  m20260513_000002_add_email_timezone.rs  m20260601_000000_add_webhook_support.rs  m20260601_000001_fix_email_log_failure_count_nullable.rs  main.rs
crates/server/: Cargo.toml
crates/server/benches/: federation.rs  federation_performance.rs  full_check.rs  validation_only.rs
crates/server/src/: api.rs  backends.rs  cache.rs  config.rs  connection_pool.rs  email_outbox.rs  email_templates.rs  error.rs  lib.rs  main.rs  net.rs  optimization.rs  recurring_alerts.rs  release_notes.rs  response.rs  security.rs  tls.rs  utils.rs
crates/server/src/alerts/: change_checks.rs  checks.rs  email.rs  mod.rs  retention.rs  task_manager.rs  webhook.rs
crates/server/src/api/: account.rs  alerts.rs  alerts_v2.rs  auth.rs  debug.rs  federation.rs  health.rs  metrics.rs  mod.rs  openapi.rs  probe.rs  statistics.rs
crates/server/src/client/: mod.rs  resolution.rs
crates/server/src/distributed/: email_guard.rs  lock.rs  mod.rs  registry.rs
crates/server/src/entity/: access_tokens.rs  alert.rs  alert_notification_email.rs  alert_notification_webhook.rs  alert_observed_state.rs  alert_status_history.rs  email_log.rs  email_outbox.rs  federation_stat_aggregate.rs  federation_stat_raw.rs  mod.rs  oauth2_authorization.rs  oauth2_client.rs  oauth2_identity.rs  oauth2_token.rs  oauth2_user.rs  user_email.rs  webhook_outbox.rs
crates/server/src/federation/: cache_wrappers.rs  certificate.rs  connection.rs  dns.rs  keys.rs  mod.rs  network.rs  version.rs  well_known.rs
crates/server/src/logging/: mod.rs  wide_events.rs
crates/server/src/oauth2/: consent.rs  endpoints.rs  identity.rs  login.rs  magic_link.rs  mod.rs  password.rs  password_reset.rs  register.rs  registrar.rs  state.rs
crates/server/src/stats/: mod.rs
crates/server/src/validation/: server_name.rs
crates/server/static/css/: templates.css
crates/server/static/js/: password-strength.js
crates/server/styles/: email.scss
crates/server/templates/: account.html  account_verification_email.html  consent.html  failure_email.html  login.html  magic_link_email.html  magic_link_sent.html  password_reset_confirm.html  password_reset_email.html  password_reset_request.html  recovery_email.html  register.html  server_name_change_email.html  test_email.html  tls_cert_change_email.html  tls_expiry_email.html  verification_email.html  version_change_email.html
crates/server/tests/: alerts_tests.rs  alerts_v2_tests.rs  api_tests.rs  certificate_and_utils_tests.rs  config_tests.rs  ed25519_verification_tests.rs  error_tests.rs  federation_tests.rs  http_handler_tests.rs  integration_tests.rs  login_consent_register_tests.rs  oauth2_tests.rs  performance_tests.rs  response_tests.rs  utils_tests.rs
crates/test-harness/: Cargo.toml
crates/test-harness/src/: main.rs
crates/wide_events/: Cargo.toml
crates/wide_events/src/: lib.rs
crates/wide_instrument_macro/: Cargo.toml
crates/wide_instrument_macro/src/: lib.rs
docs/: client-migration-guide.md  oauth2-setup.md
k6/: alerts.js  ceiling.js  soak.js  stress.js
src/: main.rs  response.rs  utils.rs
