[package]
name = "rust-federation-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bytes = "1.10.1"
color-eyre = "0.6.5"
futures = "0.3.31"
hickory-resolver = "0.25.2"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1", "http2"] }
hyper-openssl = "0.10.2"
openssl = "0.10.73"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["macros", "parsing"] }
tokio = { version = "1.45.1", features = ["full"] }
hyper-util = "0.1.14"
base64 = "0.22.1"
ed25519 = "2.2.3"
ed25519-dalek = "2.1.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
