[package]
name = "matrix-federation-tester"
description = "Library for testing Matrix server federation compliance"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/MTRNord/rust-federation-tester"
keywords = ["matrix", "federation", "testing"]
categories = ["api-bindings", "network-programming"]

[dependencies]
base64 = "0.22.1"
bytes = "1.11.1"
dashmap = "6.1.0"
ed25519-dalek = "2.1.1"
futures = "0.3.31"
hickory-resolver = "0.26.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.14", features = ["tokio"] }
once_cell = "1.21.3"
rustls = "0.23"
rustls-native-certs = "0.8.3"
rustls-pki-types = "1.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.11"
thiserror = "2.0.16"
time = { version = "0.3.47", features = ["macros", "parsing", "serde", "serde-well-known", "formatting"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26"
tracing = "0.1.41"
url = "2.5.4"
x509-parser = "0.18"
utoipa = { version = "5.4.0", features = ["time", "uuid", "url"], optional = true }

[features]
default = []
utoipa = ["dep:utoipa"]

[dev-dependencies]
rustls = { version = "0.23", features = ["ring"] }
