[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
config = { version = "0.15.13", features = ["yaml"] }
sea-orm-migration = { version = "1.1.0", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"]}
tokio = { version = "1.46.1", features = ["full"] }
