[package]
name = "rust-federation-tester"
version = "0.1.0"
edition = "2024"
description = "A library for testing Matrix federation compatibility of servers"
license = "AGPL-3.0-or-later"
repository = "https://github.com/MTRNord/rust-federation-tester"
readme = "README.md"
keywords = ["matrix", "federation", "testing"]
categories = ["api-bindings", "network-programming"]

[dependencies]
axum = "0.8.4"
bytes = "1.10.1"
color-eyre = "0.6.5"
futures = "0.3.31"
hickory-resolver = "0.25.2"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2"] }
rustls = "0.23"
rustls-pemfile = "2.2"
rustls-webpki = "0.103"
rustls-pki-types = "1.12"
tokio-rustls = "0.26"
webpki-roots = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["macros", "parsing"] }
tokio = { version = "1.45.1", features = ["full"] }
hyper-util = "0.1.14"
base64 = "0.22.1"
ed25519 = "2.2.3"
ed25519-dalek = "2.1.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing = "0.1.41"
console-subscriber = { version = "0.4.1", optional = true }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
dashmap = "6.1.0"
once_cell = "1.21.3"
x509-parser = "0.18"
sha2 = "0.10"
sea-orm = { version = "1.1.13", features = [
    "macros",
    "runtime-tokio",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
    "with-time",
] }
dotenvy = "0.15.7"
config = { version = "0.15.13", features = ["yaml"] }
lettre = { version = "0.11.17", default-features = false, features = [
    "tokio1-rustls",
    "hostname",
    "ring",
    "webpki-roots",
    "tokio1",
    "tracing",
    "builder",
    "pool",
    "smtp-transport",
] }
uuid = "1.17.0"
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }
utoipa = { version = "5.4.0", features = [
    "axum_extras",
    "time",
    "uuid",
    "url",
] }
utoipa-axum = "0.2.0"
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
url = "2.5.4"
thiserror = "2.0.16"
blake3 = "1.8.2"
reqwest = { version = "0.12.23", features = [
    "json",
    "rustls-tls",
    "charset",
    "http2",
    "system-proxy",
], default-features = false }
askama = "0.12"
grass = "0.13"
css-inline = "0.14"

[features]
default = []
json = []
console = ["console-subscriber"]

[dev-dependencies]
axum-test = "18.1.0"
tokio-test = "0.4.4"
wiremock = "0.6.4"
criterion = { version = "0.7", features = ["html_reports"] }
rcgen = "0.14.4"
serde_urlencoded = "0.7"
