[package]
name = "rust-federation-tester"
description = "A library for testing Matrix federation compatibility of servers"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/MTRNord/rust-federation-tester"
keywords = ["matrix", "federation", "testing"]
categories = ["api-bindings", "network-programming"]

[dependencies]
askama = "0.15.1"
axum = "0.8.4"
base64 = "0.22.1"
blake3 = "1.8.2"
bytes = "1.10.1"
color-eyre = "0.6.5"
config = { version = "0.15.13", features = ["yaml"] }
console-subscriber = { version = "0.5.0", optional = true }
css-inline = "0.19"
dashmap = "6.1.0"
dotenvy = "0.15.7"
ed25519 = "2.2.3"
ed25519-dalek = "2.1.1"
futures = "0.3.31"
grass = "0.13"
hickory-resolver = "0.25.2"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2"] }
hyper-util = "0.1.14"
jsonwebtoken = { version = "10.2.0", features = ["use_pem", "rust_crypto"] }
lettre = { version = "0.11.17", default-features = false, features = [
    "tokio1-rustls",
    "hostname",
    "ring",
    "webpki-roots",
    "tokio1",
    "tracing",
    "builder",
    "pool",
    "smtp-transport",
] }
once_cell = "1.21.3"
opentelemetry = {version="0.31.0", optional=true}
opentelemetry-appender-tracing = {version="0.31.1", optional=true}
opentelemetry-otlp = { version = "0.31.0", optional = true }
opentelemetry-stdout = {version="0.31.0", optional=true}
opentelemetry_sdk = {version="0.31.0", optional=true}
reqwest = { version = "0.13.1", features = [
    "json",
    "rustls",
    "charset",
    "http2",
    "system-proxy",
], default-features = false }
rustls = "0.23"
rustls-pemfile = "2.2"
rustls-pki-types = "1.12"
rustls-webpki = "0.103"
sea-orm = { version = "1.1.13", features = [
    "macros",
    "runtime-tokio",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
    "with-time",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
thiserror = "2.0.16"
time = { version = "0.3.41", features = ["macros", "parsing"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
wide_events = { path = "../wide_events" }
wide_instrument_macro = { path = "../wide_instrument_macro" }
tracing-core = "0.1.36"
tracing-futures = "0.2.5"
tracing-opentelemetry = { version = "0.32.0", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["registry","std","fmt","env-filter", "json"] }
url = "2.5.4"
utoipa = { version = "5.4.0", features = [
    "axum_extras",
    "time",
    "uuid",
    "url",
] }
utoipa-axum = "0.2.0"
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
uuid = "1.17.0"
webpki-roots = "1.0"
x509-parser = "0.18"

[dev-dependencies]
axum-test = "18.1.0"
criterion = { version = "0.8", features = ["html_reports"] }
rcgen = "0.14.4"
serde_urlencoded = "0.7"
tokio-test = "0.4.4"
wiremock = "0.6.4"

[features]
# Default enables OpenTelemetry support (otel) and OTLP exporter (otlp)
default = ["otel", "otlp"]

# Small feature stubs
json = []
console = ["dep:console-subscriber"]

# otel: enable the OpenTelemetry SDK, log bridge and tracing->otel layer
# This includes:
#  - opentelemetry (runtime API)
#  - opentelemetry_sdk (SDK/tracer provider)
#  - opentelemetry-appender-tracing (logs bridge)
#  - opentelemetry-stdout (simple log exporter for local dev)
#  - tracing-opentelemetry (converts tracing spans to typed OTel spans)
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-appender-tracing",
    "dep:opentelemetry-stdout",
    "dep:tracing-opentelemetry"
]

# Keep a named feature for tracing-opentelemetry (alias to the dependency)
tracing-opentelemetry = ["dep:tracing-opentelemetry"]

# OTLP exporter feature (enables the opentelemetry-otlp dependency)
otlp = ["dep:opentelemetry-otlp", "tracing-opentelemetry"]
