[package]
name = "wide_events"
version = "0.1.0"
edition = "2024"
description = "Shared wide-event helpers and macros for structured tracing (WideEvent, wide_* macros, etc.)"
license = "AGPL-3.0-or-later"
publish = false

[lib]
path = "src/lib.rs"
# this is a normal library crate (not a proc-macro). A separate proc-macro crate will depend on this.

[dependencies]
tracing = "0.1.41"
tracing-core = "0.1.36"

# Optional OpenTelemetry integration (kept behind feature flag)
opentelemetry = { version = "0.31.0", optional = true }
tracing-opentelemetry = { version = "0.32.0", optional = true }

# small convenience utilities sometimes used by logging helpers
once_cell = "1.21.3"

[features]
# Keep default minimal
default = []

# Enable OpenTelemetry-related glue (if the application wants to)
otel = ["opentelemetry", "tracing-opentelemetry"]
