[package]
name = "wide_instrument_macro"
version = "0.1.0"
edition = "2024"
description = "Proc-macro crate providing a #[wide_instrument] attribute to create WideEvent instrumented functions."
license = "AGPL-3.0-or-later"
publish = false

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
# Reuse the WideEvent type and helper macros from the sibling crate.
wide_events = { path = "../wide_events" }
